# TRI

./: .replit  Cargo.toml  dashboard.html  demo  demo.rs  enhanced_demo.rs  replit.md  simple_test.rs  visualize.py
attached_assets/: remixed-7cdd71eb_1755850982648.md
src/: lib.rs
src/core/: address.rs  block.rs  blockchain.rs  economics.rs  errors.rs  fractal.rs  genesis.rs  geometry.rs  mining.rs  mod.rs  network.rs  state.rs  subdivision.rs  triangle.rs  validation.rs  wallet.rs
src/visualization/: mod.rs  renderer.rs
