[package]
name = "sierpinski_crypto"
version = "0.1.0"
edition = "2021"
description = "Geometric foundation for Sierpinski Triangle cryptocurrency"
authors = ["Sierpinski Crypto Team"]

[[bin]]
name = "triangle_cli"
path = "src/bin/triangle_cli.rs"

[dependencies]
rust_decimal = { version = "1.32", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
blake3 = "1.5"
ed25519-dalek = { version = "1.0", features = ["serde"] }
rand = "0.8"
num_cpus = "1.16"
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
proptest = "1.3"
criterion = "0.5"

